# ArborStudio

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  deploy-api.yml  deploy-web.yml  release-container.yml
apps/api/: .dev.vars.example  package.json  tsconfig.json  vitest.config.ts  vitest.integration.config.ts  wrangler.toml
apps/api/src/: errors.ts  index.ts  router.ts
apps/api/src/ai/: gateway.ts
apps/api/src/auth/: container-jwt.ts  jwt.ts  middleware.ts  turnstile.ts
apps/api/src/db/: d1.ts
apps/api/src/durable-objects/: run-do.ts  workspace-do.ts
apps/api/src/lib/: env.ts  ulid.ts
apps/api/src/observability/: analytics.ts  redact.ts  sentry.ts
apps/api/src/routes/: auth.ts  billing.ts  health.ts  llm-keys.ts  me.ts  plugins.ts  projects.ts  (+3 more)
apps/container/: .dockerignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
apps/container/arbor_studio_runner/: __init__.py  entrypoint.py
apps/web/: .env.example  next.config.mjs  open-next.config.ts  package.json  tailwind.config.ts  tsconfig.json  wrangler.toml
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/hooks/: useRunSocket.ts
apps/web/lib/: api.ts  auth.ts  cn.test.ts  cn.ts
docs/: ARCHITECTURE.md  SETUP.md
docs/adr/: 0001-arbor-in-cloudflare-container.md  0002-durable-objects-as-ws-hub.md  0003-per-workspace-d1-isolation.md  0004-llm-keys-never-leave-container.md  0005-ai-gateway-as-llm-frontend.md  0006-pages-opennext-not-vercel.md  0007-idea-tree-co-located-with-hub.md  0008-three-mode-hitl.md
(+30 files in other folders)
