[project]
name = "arborstudio-container"
version = "0.1.0"
description = "ArborStudio Python runtime — wraps the Arbor CLI in a Cloudflare Container"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "httpx>=0.27",
    "structlog>=24.1",
    "pydantic>=2.5",
    "ulid-py>=1.1",
]

[project.optional-dependencies]
arbor = [
    "arbor-cli @ git+https://github.com/RUC-NLPIR/Arbor.git@main",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arbor_studio_runner"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true
